# candle-playground

./: README.md
cache/: .gitignore
candle-playground/: Cargo.toml  Dockerfile.local
candle-playground/.cargo/: config.toml
candle-playground/examples/: gemma2.rs  got_ocr.rs  houou.rs  qwen.rs
candle-playground/src/: lib.rs
candle-playground/src/models/: gemma2.rs  mod.rs
candle-playground/src/pipelines/: lm.rs  mod.rs  ocr.rs
deployment-local/: .env  docker-compose.yml
evaluation/: Dockerfile.local  main.py  pyproject.toml
