[package]
name = "candle-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
candle-core = "0.7.1"
candle-examples = "0.7.1"
candle-nn = "0.7.1"
candle-transformers = "0.7.1"
clap = { version = "4.5.18", features = ["derive"] }
hf-hub = "0.3.2"
rand = "0.8.5"
serde_json = "1.0.128"
tokenizers = "0.19.1"
